# autograd

./: .clang-tidy  .gitignore  .lvimrc  CMakeLists.txt  README.md  ag_tests.cpp  compile_flags.txt  main_tests.cpp  matrix.hpp  mlc.cpp  operation.hpp  operationleaf.hpp  operationmul.hpp  operationplus.hpp  reqs_tests.cpp  tests.cpp  transform.hpp  types.hpp  value.hpp  variable.hpp  variableshared.hpp
ag/: ag.hpp  operators.hpp  transform.hpp  types.hpp  value.hpp  variable.hpp  variableshared.hpp
ag/operation/: avg.hpp  leaf.hpp  matmul.hpp  minus.hpp  mul.hpp  plus.hpp
